--- a/TP3/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP3/src/app/components/pages/for-playing/for-playing.component.html
@@ -126,12 +126,12 @@
       <div class="multimedia">
         <p>Imágenes</p>
         <div class="multimedia-container">
-          <app-icon
+          <!--<app-icon
             *ngIf="game!.id == 21"
             (click)="scrollLeft(scrollTarget)"
             class="arrow-scroll arrow-scroll-left"
             name="arrow-left"
-          ></app-icon>
+          ></app-icon>-->
           <div #scrollTarget class="multimedia-flex">
             <div class="image_one">
               <img
@@ -189,12 +189,12 @@
               />
             </div>
           </div>
-          <app-icon
+          <!-- <app-icon
             *ngIf="game!.id == 21"
             (click)="scrollRight(scrollTarget)"
             class="arrow-scroll arrow-scroll-right"
             name="arrow-right"
-          ></app-icon>
+          ></app-icon>-->
         </div>
       </div>
     </app-tab-content>
