--- a/TP3/src/app/components/pages/playing/playing.component.html
+++ b/TP3/src/app/components/pages/playing/playing.component.html
@@ -88,6 +88,7 @@
         (mousedown)="game.canvasMouseDown($event)"
         (mouseup)="game.canvasMouseUp($event)"
         (mousemove)="game.canvasMouseMove($event)"
+        (mouseleave)="game.canvasMouseLeave()"
         #canvas
         class="canvas"
       ></canvas>
