--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -1,1 +1,11 @@
-<p>game-parallax works!</p>
+<div class="container">
+  <div class="layer layer-8"></div>
+  <div class="layer layer-7"></div>
+  <div class="layer layer-6"></div>
+  <div class="layer layer-5"></div>
+  <div class="layer layer-4"></div>
+  <div class="layer layer-3"></div>
+  <div class="layer layer-2"></div>
+  <div class="layer layer-1"></div>
+  <div class="" id="girl"></div>
+</div>
