--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
@@ -7,8 +7,10 @@
   }
 }
 .container {
-  /* height: 600px;*/
   position: relative;
+  width: 1024px;
+  height: 576px;
+  margin-top: var(--space-large);
 }
 
 .layer {
