--- a/TP4/src/app/components/pages/playing/playing.component.html
+++ b/TP4/src/app/components/pages/playing/playing.component.html
@@ -1,2 +1,1 @@
-<app-game-connect-four *ngIf="id == 21"></app-game-connect-four>
-<app-game-parallax *ngIf="id == 26"></app-game-parallax>
+<p>playing</p>
