--- a/TP4/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP4/src/app/components/pages/for-playing/for-playing.component.html
@@ -17,16 +17,24 @@
   </div>
 
   <div *ngIf="game!.id == 21 || game!.id == 26" class="game-container">
-    <!-- <app-button
+    <app-button
       class="btn-play-game"
+      [class.btn-play-game-connect4]="id == 21"
+      [class.btn-play-game-parallax]="id == 26"
       text="Jugar"
       classList="background-success"
       size="large"
-      (click)="hideElement()"
-      *ngIf="isVisible"
-    ></app-button> -->
-    <!-- <div class="opacity opacity-game" *ngIf="isVisible"></div> -->
-    <app-playing> </app-playing>
+      (click)="playGame()"
+      *ngIf="!gameIsPlaying"
+    ></app-button>
+    <app-game-connect-four *ngIf="game!.id == 21"></app-game-connect-four>
+    <app-game-parallax *ngIf="game!.id == 26"></app-game-parallax>
+    <div
+      class="opacity"
+      [class.opacity-connect4]="id == 21"
+      [class.opacity-parallax]="id == 26"
+      *ngIf="!gameIsPlaying"
+    ></div>
   </div>
 
   <div class="image-container">
@@ -35,7 +43,6 @@
       text="Jugar"
       classList="background-success"
       size="large"
-      routerLink="/jugando/{{ game!.id }}"
     ></app-button>
     <div class="opacity opacity-img"></div>
     <app-card-game
@@ -104,99 +111,10 @@
       {{ game!.description }}
     </app-tab-content>
     <app-tab-content *ngIf="tabSelected == 2">
-      <app-how-to-play></app-how-to-play>
+      <app-how-to-play [game]="game"></app-how-to-play>
     </app-tab-content>
     <app-tab-content *ngIf="tabSelected == 3">
-      <div class="multimedia">
-        <p>Video</p>
-        <div class="video">
-          <img
-            class="img-video"
-            *ngIf="game!.id == 21"
-            src="assets/images/puzzle/connect4video.jpg"
-            alt="video"
-          />
-          <img
-            *ngIf="game!.id != 21"
-            src="assets/images/infantiles/3pandasenjaponvideo.jpg"
-            alt="video"
-          />
-        </div>
-      </div>
-      <div class="multimedia">
-        <p>Imágenes</p>
-        <div class="multimedia-container">
-          <!--<app-icon
-            *ngIf="game!.id == 21"
-            (click)="scrollLeft(scrollTarget)"
-            class="arrow-scroll arrow-scroll-left"
-            name="arrow-left"
-          ></app-icon>-->
-          <div #scrollTarget class="multimedia-flex">
-            <div class="image_one">
-              <img
-                *ngIf="game!.id == 21"
-                src="assets/images/puzzle/connect4multimedia1.jpg"
-                alt="video"
-              />
-              <img
-                *ngIf="game!.id != 21"
-                src="assets/images/infantiles/3pandasenjaponmultimedia3.jpg"
-                alt="image3"
-              />
-            </div>
-            <div class="image two">
-              <img
-                *ngIf="game!.id == 21"
-                src="assets/images/puzzle/connect4multimedia2.jpg"
-                alt="video"
-              />
-              <img
-                *ngIf="game!.id != 21"
-                src="assets/images/infantiles/3pandasenjaponmultimedia4.jpg"
-                alt="image4"
-              />
-            </div>
-            <div class="image three">
-              <img
-                *ngIf="game!.id == 21"
-                src="assets/images/puzzle/connect4multimedia3.jpg"
-                alt="video"
-              />
-              <img
-                *ngIf="game!.id != 21"
-                src="assets/images/infantiles/3pandasenjaponmultimedia5.jpg"
-                alt="image5"
-              />
-            </div>
-            <div class="image four">
-              <img
-                *ngIf="game!.id == 21"
-                src="assets/images/puzzle/connect4multimedia4.jpg"
-                alt="video"
-              />
-              <img
-                *ngIf="game!.id != 21"
-                src="assets/images/infantiles/3pandasenjaponmultimedia6.jpeg"
-                alt="image6"
-              />
-            </div>
-            <div class="image five">
-              <img
-                *ngIf="game!.id != 21"
-                src="assets/images/infantiles/3pandasenjaponmultimedia7.jpg"
-                alt="image7"
-              />
-            </div>
-          </div>
-          <!-- <app-icon
-            *ngIf="game!.id == 21"
-            (click)="scrollRight(scrollTarget)"
-            class="arrow-scroll arrow-scroll-right"
-            name="arrow-right"
-          ></app-icon>-->
-        </div>
-      </div>
+      <app-tab-multimedia [id]="game.id"></app-tab-multimedia>
     </app-tab-content>
   </div>
 </section>
