--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -7,5 +7,9 @@
   <div class="layer layer-3"></div>
   <div class="layer layer-2"></div>
   <div class="layer layer-1"></div>
-  <div class="" id="girl"></div>
+  <div id="character"></div>
+  <!-- <div class="zombie" id="zombie1"></div> -->
+  <!-- <div class="zombie" id="zombie2"></div> -->
+  <!-- <div class="zombie" id="zombie3"></div> -->
+  <!-- <div class="zombie" id="zombie4"></div> -->
 </div>
