--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
@@ -1,11 +1,3 @@
-@keyframes scroll {
-  0% {
-    background-position: 0px;
-  }
-  100% {
-    background-position: -1024px;
-  }
-}
 .container {
   position: relative;
   width: 1024px;
@@ -13,26 +5,72 @@
   margin-top: var(--space-large);
 }
 
-.layer {
-  width: 1024px;
-  height: 576px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-repeat: repeat-x;
-  background-size: cover;
-}
-
-#character {
-  width: calc(1282px / 8);
+/* CHARACTER -------------------------------------------------------- */
+.character {
   height: 136px;
-  background: url('../../../../../assets/images/parallax/character-walk.png');
-  animation: walk 1.2s steps(8) infinite;
   position: absolute;
   bottom: 16px;
   left: 16px;
 }
 
+.walk {
+  width: calc(1282px / 8);
+  background: url('../../../../../assets/images/parallax/character-walk.png');
+  animation: walk 1.2s steps(8) infinite;
+}
+
+.jump {
+  width: calc(1603px / 10);
+  background: url('../../../../../assets/images/parallax/character-jump.png');
+  animation: jump 1.8s steps(10) 1;
+}
+
+.die {
+  width: calc(1363px / 10);
+  background: url('../../../../../assets/images/parallax/character-die.png');
+  animation: die 1.8s steps(9) 1 forwards;
+}
+
+@keyframes walk {
+  0% {
+    background-position: 0px;
+  }
+  100% {
+    background-position: -1282px;
+  }
+}
+
+@keyframes jump {
+  0% {
+    transform: translate(0px, 0px);
+    background-position: 0;
+  }
+  25% {
+    transform: translate(0px, -180px);
+  }
+  50% {
+    transform: translate(0px, -200px);
+  }
+  75% {
+    transform: translate(0px, -180px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+    background-position: -1603px;
+  }
+}
+
+@keyframes die {
+  0% {
+    background-position: 0px;
+  }
+  100% {
+    /* background-position: -1363px; */
+    background-position: -1227px;
+  }
+}
+
+/* ZOMBIES -------------------------------------------------------- */
 .zombie {
   width: 128px;
   height: 128px;
@@ -57,6 +95,35 @@
 
 #zombie4 {
   background: url('../../../../../assets/images/parallax/zombie4.png');
+}
+
+@keyframes walk-zombie {
+  0% {
+    background-position: 0px;
+  }
+  100% {
+    background-position: -512px;
+  }
+}
+
+/* BACKGROUND -------------------------------------------------------- */
+@keyframes scroll {
+  0% {
+    background-position: 0px;
+  }
+  100% {
+    background-position: -1024px;
+  }
+}
+
+.layer {
+  width: 1024px;
+  height: 576px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: repeat-x;
+  background-size: cover;
 }
 
 .layer-8 {
@@ -92,40 +159,4 @@
 .layer-1 {
   background-image: url('../../../../../assets/images/parallax/plant.png');
   animation: scroll 7s infinite linear;
-}
-
-@keyframes die {
-  0% {
-    background-position: 0px;
-  }
-  100% {
-    background-position: -1363px;
-  }
-}
-
-@keyframes jump {
-  0% {
-    background-position: 0px;
-  }
-  100% {
-    background-position: -1603px;
-  }
-}
-
-@keyframes walk {
-  0% {
-    background-position: 0px;
-  }
-  100% {
-    background-position: -1282px;
-  }
-}
-
-@keyframes walk-zombie {
-  0% {
-    background-position: 0px;
-  }
-  100% {
-    background-position: -512px;
-  }
 }
