--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -8,8 +8,8 @@
   <div class="layer layer-2"></div>
   <div class="layer layer-1"></div>
   <div #characterElement class="character walk"></div>
-  <!-- <div class="zombie" id="zombie1"></div> -->
-  <!-- <div class="zombie" id="zombie2"></div> -->
-  <!-- <div class="zombie" id="zombie3"></div> -->
-  <!-- <div class="zombie" id="zombie4"></div> -->
+  <div #zombie1Element class="zombie zombie1"></div>
+  <div #zombie2Element class="zombie zombie2"></div>
+  <div #zombie3Element class="zombie zombie3"></div>
+  <div #zombie4Element class="zombie zombie4"></div>
 </div>
