--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -12,4 +12,5 @@
   <div #zombie2Element class="zombie zombie2"></div>
   <div #zombie3Element class="zombie zombie3"></div>
   <div #zombie4Element class="zombie zombie4"></div>
+  <div class="gem gem-yellow"></div>
 </div>
