Added game description and how to play info

--- a/TP4/src/app/components/atoms/how-to-play/how-to-play.component.html
+++ b/TP4/src/app/components/atoms/how-to-play/how-to-play.component.html
@@ -16,9 +16,7 @@
 </ul>
 
 <ul class="instructions" *ngIf="game.id == 26">
-  <li><b>Click:</b> seleccionar ficha</li>
-  <li><b>Mover mouse con click apretado:</b> mover la ficha</li>
-  <li><b>Soltar mouse en una columna:</b> insertar ficha en columna</li>
+  <li><b>Saltar:</b> presiona la tecla W o flecha arriba.</li>
 
   <img
     class="how-to-play"
