--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
@@ -12,26 +12,39 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   justify-content: center;
   align-items: center;
 }
 
 .score {
   position: absolute;
-  z-index: 15;
+
   padding: var(--space-medium);
   display: flex;
   align-items: center;
+  z-index: 11;
 }
 
 .score-img-container {
   width: 32px;
   overflow: hidden;
+  z-index: 15;
 }
 
 .score > span {
   font-size: 1.5rem;
   font-weight: 700;
+}
+
+.opacity {
+  position: absolute;
+  background-color: var(--black);
+  opacity: 0.4;
+  width: 100%;
+  height: 100%;
+  z-index: 12;
 }
 
 /* CHARACTER -------------------------------------------------------- */
