--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div *ngIf="gameOver" class="game-over">
     <h1>Has perdido!</h1>
-    <p>Tu puntuacion fue {{ score }}</p>
+    <p>Tu puntuación fue {{ score }}</p>
     <app-button (click)="reset()" text="Reiniciar"></app-button>
   </div>
   <div class="score">
@@ -10,6 +10,7 @@
     </div>
     <span>{{ score }}</span>
   </div>
+  <div *ngIf="gameOver" class="opacity opacity-img"></div>
   <div
     class="layer layer-8"
     [ngStyle]="{ animation: gameOver ? 'none' : '' }"
