--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -11,38 +11,14 @@
     <span>{{ score }}</span>
   </div>
   <div *ngIf="gameOver" class="opacity opacity-img"></div>
-  <div
-    class="layer layer-8"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-7"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-6"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-5"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-4"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-3"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-2"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
-  <div
-    class="layer layer-1"
-    [ngStyle]="{ animation: gameOver ? 'none' : '' }"
-  ></div>
+  <div class="layer layer-8" [class.paused]="gameOver"></div>
+  <div class="layer layer-7" [class.paused]="gameOver"></div>
+  <div class="layer layer-6" [class.paused]="gameOver"></div>
+  <div class="layer layer-5" [class.paused]="gameOver"></div>
+  <div class="layer layer-4" [class.paused]="gameOver"></div>
+  <div class="layer layer-3" [class.paused]="gameOver"></div>
+  <div class="layer layer-2" [class.paused]="gameOver"></div>
+  <div class="layer layer-1" [class.paused]="gameOver"></div>
   <div id="character" class="character walk"></div>
   <div
     *ngFor="let zombie of zombiesInGame"
