--- a/TP4/src/app/components/atoms/how-to-play/how-to-play.component.html
+++ b/TP4/src/app/components/atoms/how-to-play/how-to-play.component.html
@@ -17,6 +17,45 @@
 
 <ul class="instructions" *ngIf="game.id == 26">
   <li><b>Saltar:</b> presiona la tecla W o flecha arriba.</li>
+  <b>Valores de las gemas:</b>
+  <div class="gem-list">
+    <div class="gem-container">
+      <div class="img-gem">
+        <img src="assets/images/parallax/gem-grey.png" alt="Gema gris" />
+      </div>
+      1 punto
+    </div>
+    <div class="gem-container">
+      <div class="img-gem">
+        <img src="assets/images/parallax/gem-blue.png" alt="Gema azul" />
+      </div>
+      2 puntos
+    </div>
+    <div class="gem-container">
+      <div class="img-gem">
+        <img src="assets/images/parallax/gem-green.png" alt="Gema verde" />
+      </div>
+      2 puntos
+    </div>
+    <div class="gem-container">
+      <div class="img-gem">
+        <img src="assets/images/parallax/gem-orange.png" alt="Gema naranja" />
+      </div>
+      3 puntos
+    </div>
+    <div class="gem-container">
+      <div class="img-gem">
+        <img src="assets/images/parallax/gem-pink.png" alt="Gema rosa" />
+      </div>
+      3 puntos
+    </div>
+    <div class="gem-container">
+      <div class="img-gem">
+        <img src="assets/images/parallax/gem-yellow.png" alt="Gema amarilla" />
+      </div>
+      5 puntos
+    </div>
+  </div>
 
   <img
     class="how-to-play"
