--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
@@ -9,13 +9,67 @@
 .game-over {
   z-index: 20;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 500px;
+  height: 300px;
+  background-color: #061539;
   display: flex;
+  top: 144px;
+  left: 250px;
   flex-direction: column;
-  gap: 10px;
-  justify-content: center;
+  gap: 20px;
+  padding-bottom: 30px;
   align-items: center;
+  border-radius: 20px;
+  box-shadow: var(--elevation-16dp);
+}
+
+.game-over h1 {
+  font-family: 'Creepster', cursive;
+  font-size: 3.5em;
+  letter-spacing: 2px;
+  text-align: center;
+  animation: textGameOver 1s infinite;
+  margin: 50px auto 20px;
+}
+
+@keyframes textGameOver {
+  0% {
+    color: lime;
+    text-shadow: 0 0 20px green;
+  }
+  25% {
+    color: green;
+    text-shadow: 2px 2px 2px lime;
+    transform: translate(-2px, 1px);
+  }
+  40% {
+    color: lime;
+    text-shadow: none;
+    transform: translate(0, 0);
+  }
+  50% {
+    color: green;
+    text-shadow: 5px 5px 2px blue, -5px -5px 2px red;
+    transform: translate(0px, 5px);
+  }
+  70% {
+    color: lime;
+    text-shadow: none;
+    transform: translate(0, 0);
+  }
+  80% {
+    color: lime;
+    text-shadow: 0 0 20px green;
+    transform: translate(-2px, 1px);
+  }
+  100% {
+    color: lime;
+    text-shadow: none;
+  }
+}
+
+.game-over p {
+  padding-top: 20px;
 }
 
 .score {
