Added parallax game images to how to play

--- a/TP4/src/app/components/atoms/how-to-play/how-to-play.component.html
+++ b/TP4/src/app/components/atoms/how-to-play/how-to-play.component.html
@@ -58,7 +58,7 @@
   </div>
 
   <img
-    class="how-to-play"
+    class="how-to-play margin-right"
     src="assets/images/puzzle/parallaxhowtoplay1.png"
     alt="Como jugar imagen 1"
   />
